--- a/demo1.html
+++ b/demo1.html
@@ -2,6 +2,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> 
 	<title>demo1</title>
+	<script type="text/javascript"></script>
 </head>
 <body>
 <div id="id1">ceshi????</div>
