--- a/demo1.html
+++ b/demo1.html
@@ -3,6 +3,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> 
 	<title>demo1</title>
 	<script type="text/javascript"></script>
+	<style type="text/css"></style>
 </head>
 <body>
 <div id="id1">ceshi????</div>
