--- a/demo1.html
+++ b/demo1.html
@@ -3,7 +3,9 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> 
 	<title>demo1</title>
 	<script type="text/javascript"></script>
-	<style type="text/css"></style>
+	<style type="text/css">
+	#div1{ width: 200px; height: 200px; background: blue;}
+	</style>
 </head>
 <body>
 <div id="id1">ceshi????</div>
