fixed bugs add font-size

--- a/demo1.html
+++ b/demo1.html
@@ -1,10 +1,10 @@
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> 
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>demo1</title>
 	<script type="text/javascript"></script>
 	<style type="text/css">
-	#div1{ width: 200px; height: 200px; background: blue;}
+	body{background: blue; font-size: 18px;}
 	</style>
 </head>
 <body>
