--- a/demo1.html
+++ b/demo1.html
@@ -4,7 +4,7 @@
 	<title>demo1</title>
 	<script type="text/javascript"></script>
 	<style type="text/css">
-	body{background: blue; font-size: 18px;}
+	body{background: blue; font-size: 18px;position:absolute;}
 	</style>
 </head>
 <body>
